Actualizacion de contenidos 16 de Abril 2020

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ document.write(f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYe
       </div>
       <div class="col-lg-6 col-md-5">
         <img src="img/equipo.jpg" width="100%"><br><br>
-        <p style="display: flex; justify-content: center; margin: auto;"><a class="btn btn-success" href="#" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg4">Conoce nuestro equipo de trabajo</a></p>
+        <p style="display: flex; justify-content: center; margin: auto;"><a class="btn btn-success animated pulse infinite" href="#" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg4">Conoce nuestro equipo de trabajo</a></p>
         <!-- Modal -->
         <div class="modal fade" id="bd-example-modal-lg4" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
           <div class="modal-dialog modal-lg" role="document">
@@ -209,7 +209,7 @@ document.write(f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYe
                   <div class="col-lg-3">
                     <img src="img/sua.jpg" class="redondo">
                     <h4>Brayan Sua</h4>
-                    <p>Capaz de crear y transmitir mensajes visuales mediante la aplicación de técnicas de reproducción gráfica de acuerdo a las demandas sociales, culturales y políticas de nuestro país.</p>
+                    <p>Productor Multimedia  en formacion  dedicado  a la ilustracion analoga y digital  desarrollando asi  piezas graficas y pre post produccion audiovisual, Capaz de crear y transmitir mensajes visuales mediante la aplicación de técnicas de reproducción gráfica de acuerdo a las demandas sociales, culturales y políticas de nuestro país.</p>
                     <p><a class="btn btn-success" href="https://brayansua.000webhostapp.com/" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg">Portafolio »</a></p>
                   </div><!-- /.col-lg-4 -->
                   <div class="col-lg-3">
@@ -221,7 +221,7 @@ document.write(f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYe
                   <div class="col-lg-3">
                     <img src="img/juanp.jpg" class="redondo">
                     <h4>Juan Londoño</h4>
-                    <p>Capaz de crear y transmitir mensajes visuales mediante la aplicación de técnicas de reproducción gráfica de acuerdo a las demandas sociales, culturales y políticas de nuestro país.</p>
+                    <p>Soy un productor multimedia, enfocado en el área de fotografía y diseño web, pero también me desempeño en áreas como la ilustración y la post-producción de audio y video. Dándole un estilo a mis trabajos mucho más tropicales y frescos al manejar tanto diseños como colores vivos y cálidos, transformados la forma de ver la multimedia, desde un aspecto visual más llamativo pero que conserva el mensaje.</p>
                     <p><a class="btn btn-success" href="https://juan-productormultimedia.000webhostapp.com/Mitrabajo.html" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg" target="_blank">Portafolio »</a></p>
                   </div><!-- /.col-lg-4 -->
                   <div class="col-lg-3">
