actualizacion de index

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </head>
   <body>
     <div class="icon-bar">
-  <span title="Siguenos en nuestro Marketplace"><a href="#" class="facebook"><img src="img/facebookW.svg" class="animated rubberBand infinite" height="25px"></a></span>
-  <span title="Comparte nuestros Rines y Llantas"><a href="#" class="ins"><img src="img/instagram-w.svg" class="animated rubberBand infinite" height="25px"></a></span>
-  <span title="Escribenos, te responderemos de inmediato"><a href="https://api.whatsapp.com/send?phone=573144213134&amp;text=Hola!%20somos%20Rines%20y%20Llantas%20AM%20estamos%20para%20servirle" class="wp"><img src="img/whatsapp-w.svg" class="animated rubberBand infinite" height="25px" ></a></span>
+  <span title="Siguenos en nuestro Fanpage con el hashtag #nacedelcorazón"><a href="https://www.facebook.com/Talento-SENA-107209784064004/" class="facebook"><img src="img/facebookW.svg" class="animated rubberBand infinite" height="25px"></a></span>
+  <span title="Comparte nuestros Talentos"><a href="https://www.instagram.com/talentosena4.0/" class="ins"><img src="img/instagram-w.svg" class="animated rubberBand infinite" height="25px"></a></span>
+  <span title="Escribenos, te responderemos de inmediato"><a href="https://api.whatsapp.com/send?phone=573125329110&amp;text=Hola!%20somos%20Talento%20Sena%20estamos%20para%20ayudarte" class="wp"><img src="img/whatsapp-w.svg" class="animated rubberBand infinite" height="25px" ></a></span>
     </div>
 <div class="container-fluid">
   <div class="row">
@@ -43,14 +43,14 @@ document.write(f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYe
       </ul>
       <ul class="navbar-nav">   
         <li class="nav-item active d-flex justify-content-end">
-          <a class="nav-link animated tada infinite" href="#">Comparte<span class="sr-only">(current)</span>&nbsp;<img src="img/facebook-brands.svg" width="30px" height="100%"></a>
-          <a class="nav-link" href="#">Habilidades<span class="sr-only">(current)</span>&nbsp;<img src="img/instagram-brands.svg" width="30px" height="100%"></a>
-          <a class="nav-link animated tada infinite" href="https://api.whatsapp.com/send?phone=57312 5329110&amp;text=Hola!%20somos%20Talento%20Sena%20estamos%20para%20servirle">Preguntas<span class="sr-only">(current)</span>&nbsp;<img src="img/whatsapp-brands.svg" width="30px" height="100%">&nbsp;312 5329110</a>
+          <a class="nav-link animated tada infinite" href="https://www.facebook.com/Talento-SENA-107209784064004/" target="_blank">Comparte<span class="sr-only">(current)</span>&nbsp;<img src="img/facebook-brands.svg" width="30px" height="100%"></a>
+          <a class="nav-link" href="https://www.instagram.com/talentosena4.0/" target="_blank">Talentos<span class="sr-only">(current)</span>&nbsp;<img src="img/instagram-brands.svg" width="30px" height="100%"></a>
+          <a class="nav-link animated tada infinite" href="https://api.whatsapp.com/send?phone=573125329110&amp;text=Hola!%20somos%20Talento%20Sena%20estamos%20para%20ayudarte">FAQs<span class="sr-only">(current)</span>&nbsp;<img src="img/whatsapp-brands.svg" width="30px" height="100%">&nbsp;312 532 9110</a>
           <a class="nav-link" href="#ubicacion"><span class="sr-only">(current)</span>&nbsp;<img src="img/home-solid.svg" width="30px" height="100%">&nbsp;Ver Spot</a>
         </li>
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu
+          Servicios para:
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#">Aprendices</a>
@@ -73,13 +73,13 @@ document.write(f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYe
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/slide1.jpg" class="d-block w-100" alt="rines">
+      <img src="img/slide1.jpg" class="d-block w-100" alt="Talento Sena">
     </div>
     <div class="carousel-item">
-      <img src="img/slide2.jpg" class="d-block w-100" alt="llantas">
+      <img src="img/slide2.jpg" class="d-block w-100" alt="Aprendices">
     </div>
     <div class="carousel-item">
-      <img src="img/slide3.jpg" class="d-block w-100" alt="rines y llantas">
+      <img src="img/slide3.jpg" class="d-block w-100" alt="Instructores">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -193,7 +193,7 @@ document.write(f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYe
       </div>
       <div class="col-lg-6 col-md-5">
         <img src="img/equipo.jpg" width="100%"><br><br>
-        <p style="display: flex; justify-content: center; margin: auto;"><a class="btn btn-success" href="#" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg4">Conoce nuestro equipo de trabajo</a></p>
+        <p style="display: flex; justify-content: center; margin: auto;"><a class="btn btn-success animated pulse infinite" href="#" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg4">Conoce nuestro equipo de trabajo</a></p>
         <!-- Modal -->
         <div class="modal fade" id="bd-example-modal-lg4" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
           <div class="modal-dialog modal-lg" role="document">
@@ -209,26 +209,26 @@ document.write(f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYe
                   <div class="col-lg-3">
                     <img src="img/sua.jpg" class="redondo">
                     <h4>Brayan Sua</h4>
-                    <p>Estos ejemplares PROYECTOS exclusivos en colombia, son de apreciar y opinar</p>
-                    <p><a class="btn btn-success" href="#" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg">Portafolio »</a></p>
+                    <p>Productor Multimedia  en formacion  dedicado  a la ilustracion analoga y digital  desarrollando asi  piezas graficas y pre post produccion audiovisual, Capaz de crear y transmitir mensajes visuales mediante la aplicación de técnicas de reproducción gráfica de acuerdo a las demandas sociales, culturales y políticas de nuestro país.</p>
+                    <p><a class="btn btn-success" href="https://brayansua.000webhostapp.com/" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg">Portafolio »</a></p>
                   </div><!-- /.col-lg-4 -->
                   <div class="col-lg-3">
                     <img src="img/maria.jpg" class="redondo">
                     <h4>Maria Pabon</h4>
-                    <p>Estos ejemplares PROYECTOS exclusivos en colombia, son de apreciar y opinar</p>
-                    <p><a class="btn btn-success" href="#" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg">Portafolio »</a></p>
+                    <p>Productora Multimedia, enfocada en la elaboración de contenidos transmedia, conocimientos en Pre, Pro y Postproducción Audiovisual, creación de historias, ilustración digital, públicidad, edición de imagenes y fotografía. Habilidad en liderazgo, y actitud para concluir ideas en colectivo, capacidad de resiliencia y comunicación asertiva</p>
+                    <p><a class="btn btn-success" href="https://paginalunar.000webhostapp.com/" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg" target="_blank">Portafolio »</a></p>
                   </div><!-- /.col-lg-4 -->
                   <div class="col-lg-3">
                     <img src="img/juanp.jpg" class="redondo">
                     <h4>Juan Londoño</h4>
-                    <p>Estos ejemplares PROYECTOS exclusivos en colombia, son de apreciar y opinar</p>
-                    <p><a class="btn btn-success" href="#" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg">Portafolio »</a></p>
+                    <p>Soy un productor multimedia, enfocado en el área de fotografía y diseño web, pero también me desempeño en áreas como la ilustración y la post-producción de audio y video. Dándole un estilo a mis trabajos mucho más tropicales y frescos al manejar tanto diseños como colores vivos y cálidos, transformados la forma de ver la multimedia, desde un aspecto visual más llamativo pero que conserva el mensaje.</p>
+                    <p><a class="btn btn-success" href="https://juan-productormultimedia.000webhostapp.com/Mitrabajo.html" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg" target="_blank">Portafolio »</a></p>
                   </div><!-- /.col-lg-4 -->
                   <div class="col-lg-3">
                     <img src="img/joha.jpg" class="redondo">
                     <h4>Johana Ramirez</h4>
-                    <p>Estos ejemplares PROYECTOS exclusivos en colombia, son de apreciar y opinar</p>
-                    <p><a class="btn btn-success" href="#" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg">Portafolio »</a></p>
+                    <p>Productora Multimedia en etapa lectiva  dedicada a la ilustracion analoga y digital  desarrollando asi  piezas graficas y pre post produccion audiovisual</p>
+                    <p><a class="btn btn-success" href="https://jhnrmrz.000webhostapp.com/Portafolioweb/" role="button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-lg" target="_blank">Portafolio »</a></p>
                   </div><!-- /.col-lg-4 -->
                 </div>
               </div>
@@ -246,13 +246,13 @@ document.write(f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYe
   <div class="col-lg-12"><br><br></div>
     <div class="row featurette">
       <div class="col-lg-7 col-md-7 col-sm-12 order-md-2">
-        <h2 class="featurette-heading">Oh si, que facil es<span class="text-muted">&nbsp;ubicarnos</span></h2>
-        <p class="lead">Nos encontramos en el centro de Bogotá, nuestra ubicación es de facil acceso, vengan y conozcan de nuestras promociones y descuentos</p>
+        <h2 class="featurette-heading">Oh si, tenemos aprendices con mucho Talento<span style="color: #6EB64E">&nbsp;y los encuentras en un solo lugar</span></h2>
+        <p class="lead">Nos encontramos en el centro de Bogotá, nuestra ubicación es de facíl acceso, queremos que nos vea como su aliado en la busqueda de la Mano de obra calificada en las industrias 4.0</p>
         <div class="col-lg-12"><br><br></div>
         <img src="img/trabajo.jpg">
       </div>
       <div class="col-lg-5 col-md-5 col-sm-12 order-md-1" id="ubicacion">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.2347350071971!2d-74.0920988708102!3d4.604955636566678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f993c8d7160e3%3A0x4eb5c2cc6a7f9a68!2sRINES%20%26%20LLANTAS%20A.M!5e0!3m2!1ses!2sco!4v1570498695067!5m2!1ses!2sco" width="450" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.8733988831855!2d-74.09423858529563!3d4.616664043666135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f996f79f4e283%3A0x5856b6b66ab6bd34!2sCENIGRAF!5e0!3m2!1ses!2sco!4v1587052165827!5m2!1ses!2sco" width="450" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </div>
 
